<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationFragment"
    android:orientation="vertical"
    android:background="@drawable/new_enter"
    android:gravity="center">

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_gravity="center_horizontal"
        android:textSize="32sp"
        android:textColor="@color/black"/>
    <EditText
        android:elevation="2dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login"
        android:background="@drawable/shape_text"/>
    <EditText
        android:elevation="2dp"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:background="@drawable/shape_text"/>
    <Button
        android:elevation="2dp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:id="@+id/button_reg"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:text="@string/registration"
        android:background="@drawable/shape_for_button"
        android:textSize="18sp"
        android:textStyle="normal"
        android:layout_gravity="center_horizontal" />


</LinearLayout>