<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FindingFragment"
    android:orientation="vertical"
    android:background="@color/green1">

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <EditText
            android:layout_marginEnd="5dp"
            android:elevation="2dp"
            android:layout_weight="12"
            android:id="@+id/search_place"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/write_request"
            android:background="@drawable/shape_text"/>
        <Button
            android:elevation="2dp"
            android:background="@drawable/shape_for_button"
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:elevation="2dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_text">

        <TextView
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_search"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/find_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>