<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PlaceCardInLKFragment"
    android:orientation="vertical"
    android:background="@color/green1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_weight="6"
                android:padding="5dp"
                android:elevation="2dp"
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_text"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <Button
                android:elevation="2dp"
                android:id="@+id/add_to_like_place_screen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_baseline_star_24"
                android:textSize="15sp"/>
            <Button
                android:elevation="2dp"
                android:id="@+id/add_to_path"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_baseline_bookmark_border_24"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:padding="5dp"
            android:elevation="2dp"
            android:id="@+id/location"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_text"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>
        <androidx.viewpager2.widget.ViewPager2
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:elevation="2dp"
            android:id="@+id/image_in_lk_place_screen"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:background="@drawable/shape_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>
        <TextView
            android:padding="5dp"
            android:elevation="2dp"
            android:id="@+id/address"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_text"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>
        <TextView
            android:padding="5dp"
            android:elevation="2dp"
            android:id="@+id/body_text"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_text"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</ScrollView>